edited library.js(add task through ajax and drawTask)

--- a/task_manager/templates/task_manager/task_list.html
+++ b/task_manager/templates/task_manager/task_list.html
@@ -15,14 +15,14 @@
     <div class="col-lg-12">
         <div class="row task-panel">
             {% for task in tasks %}
-                <div class="card">
-                    <div class="card-block">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
                         <h4 class="card-title">{{ task.name }}</h4>
                         <h6 class="card-subtitle mb-2 text-muted">{{ task.category }}</h6>
                         <p class="card-text">{{ task.description }}</p>
                         <p class="card-text">Deadline: {{ task.deadline }}</p>
-                        <p class="card-text">Author: {{ task.author }}</p>
-                        <p class="card-text">Performers: {{ task.get_performer }}</p>
+{#                        <p class="card-">Author: {{ task.author }}</p>#}
+{#                        <p class="card-text">Performers: {{ task.get_performer }}</p>#}
                         <a href="#" class="card-link">Card link</a>
                         <a href="#" class="card-link">Another link</a>
                     </div>
