--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,39 @@
+/*html {
+  	position: relative;
+  	min-height: 100%;
+}*/
+/*bady{
+	background-color: #f4f7f6;
+	
+}
+
+.footer {
+  	bottom: 0;
+	width: 100%;
+	height: 60px; 
+	line-height: 60px; 
+	background-color: #f5f5f5;
+	
+}*/
+
 .modal-dialog {
     max-width: 600px;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
