--- a/templates/include/modal_window.html
+++ b/templates/include/modal_window.html
@@ -9,31 +9,44 @@
         </button>
       </div>
         <div class="modal-body">
-            <form>
-                <div class="form-group row">
+            <form id='task-form' action='.' data-url='{{ request.build_absolute_uri|safe }}' method="post">
+              {{form.as_p}}
+
+
+              <!--{# {% csrf_token %} #}
+                {# <div class="form-group row">
                     <label for="task-name" class="col-sm-2 col-form-label">Task:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="task-name" id="task-name" value="Пора на работу">
+                        <input type="text" class="form-control" name="task-name" id="task-name">
                     </div>
-                </div>
-                <div class="form-group row">
-                    <label for="task-category" class="col-sm-2 col-form-label">Category:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="task-category" id="task-category" value="Работа">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="task-description" class="col-sm-2 col-form-label">Description: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" name="task-description" id="task-description" value="Описание ...">
-                    </div>
-                </div>
+                </div> #}
+
+                
+{#                <div class="form-group row">#}
+{#                    <label for="task-category" class="col-sm-2 col-form-label">Category:</label>#}
+{#                    <div class="col-sm-10">#}
+{#                        <input type="text" class="form-control" name="task-category" id="task-category" value="Работа">#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="form-group row">#}
+{#                    <label for="task-description" class="col-sm-2 col-form-label">Description: </label>#}
+{#                    <div class="col-sm-10">#}
+{#                        <input type="text" class="form-control" name="task-description" id="task-description" value="Описание ...">#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="form-group row">#}
+{#                    <label for="task-deadline" class="col-sm-2 col-form-label">Deadline: </label>#}
+{#                    <div class="col-sm-10">#}
+{#                        <input type="date" class="task-deadline" name="task-deadline" id="task-deadline" value="Срок выполнения">#}
+{#                    </div>#}
+{#                </div>#} -->
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Add task</button>
+              </div>
             </form>
         </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Add task</button>
-      </div>
     </div>
   </div>
 </div>
