--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,25 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+
+
+.blog-header {
+  line-height: 1;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.blog-header-logo {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-size: 2.25rem;
+}
+
+.blog-header-logo:hover {
+  text-decoration: none;
+}
+
+
+
 .footer {
   position: absolute;
   bottom: 0;
