--- a/templates/base.html
+++ b/templates/base.html
@@ -9,21 +9,40 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/signin.css' %}">
     <title>Task manager</title>
   </head>
   <body>
     <main role="main" class="container-fluid">
-    {# <div class="container-fluid"> #}
         <div class="row-fluid">
-            <h1 class="text-center p-3">Task manager</h1>
+            <header class="blog-header py-3 mb-3">
+                <div class="row flex-nowrap justify-content-between align-items-center">
+                  <div class="col-4 pt-1">
+                    {% if user.is_authenticated %}
+                    <span class="text-muted" >User: {{ user }}</span>
+                    {% endif %}
+                  </div>
+                  <div class="col-4 text-center">
+                    <a class="blog-header-logo text-dark" href="#">Task manager</a>
+                  </div>
+                  <div class="col-4 d-flex justify-content-end align-items-center">
+                    <!-- <a class="text-muted" href="#">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
+                    </a> -->
+                    {% if user.is_authenticated %}
+                    <a class="btn btn-sm btn-outline-secondary" href="{% url 'accounts:logout' %}">Logout</a>
+                    {% endif %}
+                  </div>
+                </div>
+              </header>
+
             {% block content %}{% endblock %}
         </div>
-    {# </div> #}
     </main>
 
     <footer class="footer">
         <div class="container">
-            <span class="text-muted">Task manager</span>
+            <span class="text-muted">&copy; Task manager, 2018</span>
         </div>
     </footer>
 
