--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,6 +9,6 @@
 <form class="form-signin" action="." method="post">{% csrf_token %}
 	<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 		{{ form.as_p }}
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	<button class="btn btn-lg btn-light btn-block" type="submit">Sign in</button>
 </form>	
 {% endblock %}
