--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,5 @@
-/*html {
-  	position: relative;
-  	min-height: 100%;
-}*/
-/*bady{
-	background-color: #f4f7f6;
-	
-}
 
-.footer {
+/*.footer {
   	bottom: 0;
 	width: 100%;
 	height: 60px; 
@@ -16,9 +8,7 @@
 	
 }*/
 
-.modal-dialog {
-    max-width: 600px;
-}
+
 
 html {
   position: relative;
@@ -27,9 +17,9 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  line-height: 1;
+
 }
-
-
 
 .blog-header {
   line-height: 1;
@@ -45,7 +35,9 @@ body {
   text-decoration: none;
 }
 
-
+.modal-dialog {
+  max-width: 600px;
+}
 
 .footer {
   position: absolute;
