--- a/templates/include/modal_error.html
+++ b/templates/include/modal_error.html
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="modal-error-all" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
+    <div class="modal-content alert alert-danger">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLongTitle">Error</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
