--- a/task_manager/templates/task_manager/task_form.html
+++ b/task_manager/templates/task_manager/task_form.html
@@ -30,7 +30,7 @@
 		<div id="category-panel">
 			<div class="nav nav-category flex-column nav-pills">
 				{% for category in  categories %}
-					<a class="btn btn-sm btn-outline-secondary mt-1 mb-1">
+					<a class="btn btn-sm btn-outline-secondary mt-1 mb-1"
 					id="cat-{{ category.id }}" href="#">{{ category }} </a>
 				{% endfor %}
 			</div>
